WebShop.API/src/main/java/com/example/webshopapi/error/exception/CartItemNotFoundException.java
package com.example.webshopapi.error.exception;

public class CartItemNotFoundException extends RuntimeException{
    public CartItemNotFoundException(String message){
        super(message);
    }
}